# test-repository

./: .cz.toml  .gitignore  README.md  package-lock.json  package.json  project.json  pyproject.toml
.github/workflows/: release.yml
iftracer/sdk/: __init__.py  fetcher.py  telemetry.py
iftracer/sdk/config/: __init__.py
iftracer/sdk/decorators/: __init__.py  base.py
iftracer/sdk/prompts/: __init__.py  client.py  registry.py
iftracer/sdk/traceutils/: consts.py  set_trace_utils.py  trace_model_utils.py
iftracer/sdk/traceutils/tests/: test_openai2_vanilla.py
iftracer/sdk/tracing/: __init__.py  context_manager.py  manual.py  tracing.py
tests/: conftest.py  test_association_properties.py  test_manual.py  test_nested_tasks.py  test_privacy_no_prompts.py  test_prompt_management.py  test_sdk_initialization.py  test_tasks.py  test_workflows.py
tests/cassettes/test_manual/: test_manual_report.yaml  test_resource_attributes.yaml
tests/cassettes/test_privacy_no_prompts/: test_simple_workflow.yaml
tests/cassettes/test_prompt_management/: test_prompt_management.yaml
tests/cassettes/test_sdk_initialization/: test_resource_attributes.yaml
tests/cassettes/test_tasks/: test_task_io_serialization_with_langchain.yaml
tests/cassettes/test_workflows/: test_simple_aworkflow.yaml  test_simple_workflow.yaml  test_streaming_workflow.yaml
