[tool.coverage.run]
branch = true
source = [ "iftracer/sdk" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.poetry]
name = "iftracer-sdk"
version = "0.2.0"
description = "Iftracer Software Development Kit (SDK) for Python"
authors = [
  "Gal Kleinman <gal@traceloop.com>",
  "Nir Gazit <nir@traceloop.com>",
  "Tomer Friedman <tomer@traceloop.com>",
  "Zhixuan Zhou <zhixuan@insightfinder.com>"
]
repository = "https://github.com/traceloop/openllmetry"
documentation = "https://traceloop.com/docs/openllmetry"
license = "Apache-2.0"
readme = "README.md"

[[tool.poetry.packages]]
include = "iftracer/sdk"

[tool.poetry.dependencies]
python = ">=3.9,<4"
aiohttp = "3.11.7"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp-proto-http = "^1.25.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.25.0"
opentelemetry-instrumentation-requests = "^0.46b0"
opentelemetry-instrumentation-sqlalchemy = "^0.46b0"
opentelemetry-instrumentation-urllib3 = "^0.46b0"
opentelemetry-if-semantic-conventions-ai = "^0.3.6"
opentelemetry-if-instrumentation-mistralai = "^0.25.6"
opentelemetry-if-instrumentation-openai = "^0.25.6"
opentelemetry-if-instrumentation-ollama = "^0.25.6"
opentelemetry-if-instrumentation-anthropic = "^0.25.6"
opentelemetry-if-instrumentation-cohere = "^0.25.6"
opentelemetry-if-instrumentation-google-generativeai = "^0.25.6"
opentelemetry-if-instrumentation-pinecone = "^0.25.6"
opentelemetry-if-instrumentation-qdrant = "^0.25.6"
opentelemetry-if-instrumentation-langchain = "^0.25.6"
opentelemetry-if-instrumentation-chromadb = "^0.25.6"
opentelemetry-if-instrumentation-transformers = "^0.25.6"
opentelemetry-if-instrumentation-together = "^0.25.6"
opentelemetry-if-instrumentation-llamaindex = "^0.25.6"
opentelemetry-if-instrumentation-milvus = "^0.25.6"
opentelemetry-if-instrumentation-haystack = "^0.25.6"
opentelemetry-if-instrumentation-bedrock = "^0.25.6"
opentelemetry-if-instrumentation-replicate = "^0.25.6"
opentelemetry-if-instrumentation-vertexai = "^0.25.6"
opentelemetry-if-instrumentation-watsonx = "^0.25.6"
opentelemetry-if-instrumentation-weaviate = "^0.25.6"
opentelemetry-if-instrumentation-alephalpha = "^0.25.6"
opentelemetry-if-instrumentation-marqo = "^0.25.6"
colorama = "^0.4.6"
tenacity = "^8.2.3"
pydantic = ">=1"
jinja2 = "^3.1.2"
deprecated = "^1.2.14"
posthog = ">3.0.2, <4"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.2.0"
flake8 = "7.0.0"
pytest = "^8.2.2"
pytest-sugar = "1.0.0"

[tool.poetry.group.test.dependencies]
openai = "^1.31.1"
vcrpy = "^6.0.1"
pytest-recording = "^0.13.1"
pydantic = "<3"
pytest-asyncio = "^0.23.7"
langchain = "^0.2.5"
langchain-openai = "^0.1.15"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
